[MOD-150] Desktop + Mobile Web: Additional UAT feedback for the pending order bar    fix modify order bar buttons top-alignment
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@80396 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/modifyorder/common.css
+++ b/projects/Media/docroot/assets/css/modifyorder/common.css
@@ -148,9 +148,6 @@
 #locationbar-sticky-wrapper #locabar_user_trigger > a:visited {
 	color: #fff;
 }
-#location-modify-order-message .location-modify-order-btn-cont > span {
-	display: inline-block;
-}
 #location-modify-order-message .location-modify-order-btn-cont > span + span {
 	margin-left: 10px;
 }
